--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>Steam Family</title>
-    <link rel="icon" type="image/png" href="/Steam-family/favicon.png" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
